--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,6 @@
     </header>
     <!-- HEADER SECTION END -->
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
     </body>
     </html> 
